tests/errors/syn_err03.kt
// extra token error
123 val